# mail

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.en.md  PRIVACY.md  README.md  SECURITY.md  SECURITY_THREAT_MODEL.md  todo-archive.md  todo.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+4 more)
backend/: .env.example  .gitignore  CHANGELOG.md  OPERATIONS.md  PERFORMANCE_BASELINE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SMOKE_v0.1.0.md  SECURITY_RELEASE_CHECK.md  THIRD_PARTY_LICENSES.md  eclipse-formatter.xml  package-sidecar-dev-windows.ps1  pom.xml  run-dev.ps1  spotbugs-exclude.xml
docs/: API_SURFACE_AUDIT.md  AUDIT_GUIDE.md  COMPOSE_DRAFT_LIFECYCLE.md  CONTENT_RENDERING_AUDIT.md  CRYPTO_STORAGE_AUDIT.md  IMAP_SMTP_AUDIT.md  OAUTH_AUDIT.md  STATIC_ANALYSIS.md  UPDATER_AUDIT.md
frontend/: .env.e2e  .gitignore  .prettierignore  END_USER_README.md  README.md  THIRD_PARTY_LICENSES.md  eslint.config.js  knip.json  package-lock.json  package.json  playwright.config.ts  playwright.existing-server.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  THIRD_PARTY_LICENSES.md  tauri.conf.json
frontend/src-tauri/.cargo/: audit.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/resources/: NOTICE.txt
frontend/src-tauri/scripts/: generate-sbom.mjs  regen-third-party-licenses.mjs
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/windows/: Czech.nsh  nsis-installer.nsi
(+675 files in other folders)
